--- a/1.css
+++ b/1.css
@@ -1,22 +1,6 @@
 * {
     text-align: center;
 }
-.font {
-    position: absolute ;
-    color: white;
-    font-size: 150px;
-    width: 100%;
-    font-family: Arial, Helvetica, sans-serif;
-    z-index: 1; 
-}
-.container {
-    position: absolute;
-    top: 3%;
-    left: 3%;
-    right: 3%;
-    bottom: 3%;
-    background-color: lightcyan;
-}
 .blue {
     background-color: aquamarine;
     
@@ -29,7 +13,7 @@
     margin-top: -10px;
 }
 .green {
-    background-color: lawngreen;
+    background-color: #FF0054;
     
     position: absolute;
     width: 50%;
@@ -40,13 +24,57 @@
     margin-top: -10px;
 }
 .green2 {
-    background-color: lawngreen;
+    background-color: #9E0059;
+    
+    position: absolute;
+    width: 50%;
+    height: 10px;
+    left: 50%;
+    top: 30%;
+    margin-left: -25%;
+    margin-top: -10px;
+}
+.green3 {
+    background-color: #390099;
+    
+    position: absolute;
+    width: 50%;
+    height: 10px;
+    left: 50%;
+    top: 20%;
+    margin-left: -25%;
+    margin-top: -10px;
+}
+.greenbottom {
+    background-color: #5900FF;
     
     position: absolute;
     width: 50%;
     height: 10px;
     left: 50%;
     top: 60%;
+    margin-left: -25%;
+    margin-top: -10px;
+}
+.greenbottom2 {
+    background-color: #FF5400;
+    
+    position: absolute;
+    width: 50%;
+    height: 10px;
+    left: 50%;
+    top: 70%;
+    margin-left: -25%;
+    margin-top: -10px;
+}
+.greenbottom3 {
+    background-color: #FFBD00;
+    
+    position: absolute;
+    width: 50%;
+    height: 10px;
+    left: 50%;
+    top: 80%;
     margin-left: -25%;
     margin-top: -10px;
 }
